fix: use flex wrap insteadof float

--- a/docs/style.css
+++ b/docs/style.css
@@ -2,8 +2,8 @@
  * name: @jswork/wsui-justify-list
  * description: wsui module for negative margin list.
  * homepage: https://github.com/afeiship/wsui-justify-list
- * version: 1.1.0
- * date: 2021-01-15 13:30:46
+ * version: 1.0.0
+ * date: 2021-01-15 13:33:07
  * license: MIT
  */
 /*wsui-justify-list Start*/
@@ -54,11 +54,11 @@ h2 {
 .list1 {
   margin-bottom: 20px;
   width: 1000px;
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .list1 > .is-item {
-  float: left;
   box-sizing: border-box;
   width: 220px;
   margin-right: 40px;
@@ -77,11 +77,11 @@ h2 {
 .list2 {
   margin-bottom: 20px;
   width: 100%;
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .list2 > .is-item {
-  float: left;
   box-sizing: border-box;
   width: 24%;
   margin-right: 1.33333%;
